--- a/GST/Views/Home/login.cshtml
+++ b/GST/Views/Home/login.cshtml
@@ -1,4 +1,4 @@
-﻿@model GST.Models.USER1
+﻿@model GST.Models.USER
 @{
     ViewBag.Title = "login";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -151,7 +151,7 @@
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-lg-12">
-                                <form id="login-form" action="MyAccount/login" method="post" role="form" style="display: block;">
+                                <form id="login-form" action="Home/login" method="post" role="form" style="display: block;">
                                     <div class="form-group">
                                         @Html.TextBoxFor(model => model.uid, new { @id = "username", @tabindex = "1", @class = "form-control", @placeholder = "Username", @value = "" })
                                     </div>
@@ -168,7 +168,7 @@
                                     </div>
                                     
                                 </form>
-                                <form id="register-form" action="MyAccount/signup" method="post" role="form" style="display: none;">
+                                <form id="register-form" action="Register" method="post" role="form" style="display: none;">
                                     <div class="form-group">
                                         @Html.TextBoxFor(model => model.uid, new { @id = "username", @tabindex = "1", @class = "form-control", @placeholder = "Username", @value = "" })
                                     </div>
@@ -176,7 +176,7 @@
                                         @Html.TextBoxFor(model => model.fname, new { @id = "fname", @tabindex = "1", @class = "form-control", @placeholder = "First Name", @value = "" })
                                     </div>
                                     <div class="form-group">
-                                        @Html.TextBoxFor(model => model.fname, new { @id = "lname", @tabindex = "1", @class = "form-control", @placeholder = "Last Name", @value = "" })
+                                        @Html.TextBoxFor(model => model.lname, new { @id = "lname", @tabindex = "1", @class = "form-control", @placeholder = "Last Name", @value = "" })
                                     </div>
                                     <div class="form-group">
                                         @Html.PasswordFor(model => model.pass, new { @id = "password", @tabindex = "2", @class = "form-control", @placeholder = "Password" })
